--- a/css/type_energie_style.css
+++ b/css/type_energie_style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background: #faf1e4;
+  background: white;
   justify-content: center;
   align-items: center;
   height: 100vh;
